@@ -1,3 +1,6 @@
+5/4/2004:	v2.4.14
+	- add only english to boot/message (#38339)
+
 5/4/2004:	v2.4.13
 	- japanese translations, again
 	- new boot graphics, again
